--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -401,7 +401,7 @@
         >“Muchas veces confiamos en un médico: está bien hacerlo, porque el
         médico está allí para curar; tenemos confianza en una persona: hermanos,
         hermanas, que nos pueden ayudar. Está bien tener esta confianza humana
-        entre nosotros. Pero nos olvidamos de la confianza en el Se- ñor: ésta
+        entre nosotros. Pero nos olvidamos de la confianza en el Señor: ésta
         es la clave del éxito en la vida. ¡La confianza en el Señor,
         encomendémonos al Señor!”</em
       >
